[gd_scene load_steps=38 format=2]

[ext_resource path="res://Assets/knight.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/knight/Walk/walk6.png" type="Texture" id=3]
[ext_resource path="res://Assets/knight/Walk/walk3.png" type="Texture" id=4]
[ext_resource path="res://Assets/knight/Walk/walk2.png" type="Texture" id=5]
[ext_resource path="res://Assets/knight/Walk/walk4.png" type="Texture" id=6]
[ext_resource path="res://Assets/knight/Walk/walk5.png" type="Texture" id=7]
[ext_resource path="res://Assets/knight/Walk/walk1.png" type="Texture" id=8]
[ext_resource path="res://Assets/knight/Idle/idle1.png" type="Texture" id=9]
[ext_resource path="res://Assets/knight/Jump/jump1.png" type="Texture" id=10]
[ext_resource path="res://Assets/knight/Idle/idle7.png" type="Texture" id=11]
[ext_resource path="res://Assets/knight/Idle/idle8.png" type="Texture" id=12]
[ext_resource path="res://Assets/knight/Idle/idle9.png" type="Texture" id=13]
[ext_resource path="res://Assets/knight/Jump/jump2.png" type="Texture" id=14]
[ext_resource path="res://Assets/knight/Jump/jump3.png" type="Texture" id=15]
[ext_resource path="res://Assets/knight/Jump/jump4.png" type="Texture" id=16]
[ext_resource path="res://Assets/knight/Idle/idle10.png" type="Texture" id=17]
[ext_resource path="res://Assets/knight/Idle/idle12.png" type="Texture" id=18]
[ext_resource path="res://Assets/knight/Idle/idle11.png" type="Texture" id=19]
[ext_resource path="res://Assets/knight/Jump/jump6.png" type="Texture" id=20]
[ext_resource path="res://Assets/knight/Jump/jump7.png" type="Texture" id=21]
[ext_resource path="res://Assets/knight/Jump/jump5.png" type="Texture" id=22]
[ext_resource path="res://Assets/knight/Idle/idle5.png" type="Texture" id=23]
[ext_resource path="res://Assets/knight/Idle/idle2.png" type="Texture" id=24]
[ext_resource path="res://Assets/knight/Idle/idle3.png" type="Texture" id=25]
[ext_resource path="res://Assets/knight/Idle/idle4.png" type="Texture" id=26]
[ext_resource path="res://Assets/knight/Idle/idle6.png" type="Texture" id=27]
[ext_resource path="res://src/status/LifeBar.tscn" type="PackedScene" id=28]
[ext_resource path="res://Assets/knight/Attack1/attack1.png" type="Texture" id=34]
[ext_resource path="res://Assets/knight/Attack1/attack0.png" type="Texture" id=35]
[ext_resource path="res://Assets/knight/Attack1/attack2.png" type="Texture" id=36]
[ext_resource path="res://Assets/knight/Attack1/attack3.png" type="Texture" id=37]
[ext_resource path="res://Assets/knight/Attack1/attack4.png" type="Texture" id=38]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 27 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ) ],
"loop": true,
"name": "attack1",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.3515, 21.6274 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.2434, 27.1119 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15.865, 22.95 )

[node name="Player" type="Node2D"]
position = Vector2( -1, 0 )

[node name="Player" type="KinematicBody2D" parent="." groups=[
"player",
"playerAttackArea",
]]
collision_mask = 8
script = ExtResource( 2 )
gravity = 4000.0

[node name="knight" type="Sprite" parent="Player"]
visible = false
position = Vector2( 6.88651, -26.4866 )
scale = Vector2( 0.973722, 0.914596 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
position = Vector2( 23.4868, -43.552 )
scale = Vector2( 0.918707, 0.969805 )
frames = SubResource( 1 )
animation = "attack1"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 5.64873, -21.3693 )
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="Player" groups=[
"Sword",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/AttackArea"]
position = Vector2( 45.19, -21.369 )
shape = SubResource( 3 )
disabled = true

[node name="Hurtbox" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Hurtbox"]
position = Vector2( 5.64873, -21.369 )
shape = SubResource( 4 )

[node name="LifeBar" parent="Player" instance=ExtResource( 28 )]
margin_left = -32.4441
margin_top = -66.0157
margin_right = 40.5559
margin_bottom = -52.0157

[connection signal="animation_finished" from="Player/AnimatedSprite" to="Player" method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Player/Hurtbox" to="Player" method="_on_Hurtbox_area_entered"]
